@@ -7,6 +7,7 @@ GENERAL:
 * update predefined.xml to 8122-5298
 * trait-PathableName.php | improve function toString() to display alternativeName of VSYS
 * class-LoopbackInterface | introduce function type()
+* class-VirtualRouter | extend function addstaticRouter to create correct XML output
 
 UTILS:
 
